wwpdb/utils/nmr/cpp_src/CharmmMRParser.cpp

// Generated from /data/git/py-wwpdb_utils_nmr/wwpdb/utils/tests-nmr/antlr-grammars-v4.10/CharmmMRParser.g4 by ANTLR 4.13.2


#include "CharmmMRParserVisitor.h"

#include "CharmmMRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CharmmMRParserStaticData final {
  CharmmMRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CharmmMRParserStaticData(const CharmmMRParserStaticData&) = delete;
  CharmmMRParserStaticData(CharmmMRParserStaticData&&) = delete;
  CharmmMRParserStaticData& operator=(const CharmmMRParserStaticData&) = delete;
  CharmmMRParserStaticData& operator=(CharmmMRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag charmmmrparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CharmmMRParserStaticData> charmmmrparserParserStaticData = nullptr;

void charmmmrparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (charmmmrparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(charmmmrparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CharmmMRParserStaticData>(
    std::vector<std::string>{
      "charmm_mr", "comment", "distance_restraint", "point_distance_restraint", 
      "dihedral_angle_restraint", "harmonic_restraint", "manipulate_internal_coordinate", 
      "droplet_potential", "fix_atom_constraint", "center_of_mass_constraint", 
      "fix_bond_or_angle_constraint", "restrained_distance", "external_force", 
      "rmsd_restraint", "gyration_restraint", "distance_matrix_restraint", 
      "noe_statement", "noe_assign", "pnoe_statement", "pnoe_assign", "dihedral_statement", 
      "dihedral_assign", "harmonic_statement", "absolute_spec", "force_const_spec", 
      "bestfit_spec", "coordinate_spec", "ic_statement", "droplet_statement", 
      "fix_atom_statement", "center_of_mass_statement", "fix_bond_or_angle_statement", 
      "shake_opt", "fast_opt", "restrained_distance_statement", "external_force_statement", 
      "rmsd_statement", "rmsd_orient_spec", "rmsd_force_const_spec", "rmsd_coordinate_spec", 
      "gyration_statement", "distance_matrix_statement", "selection", "selection_expression", 
      "term", "factor", "number", "number_f", "number_s", "set_statement"
    },
    std::vector<std::string>{
      "", "'SET'", "'END'", "", "", "", "", "", "", "", "'MASS'", "", "", 
      "", "", "", "", "", "'MAIN'", "'COMP'", "'KEEP'", "", "", "'MIN'", 
      "", "", "'CLDH'", "'IC'", "'BOND'", "", "", "", "", "", "'FIX'", "'PURG'", 
      "'THET'", "'PHI'", "'IMPH'", "'HMCM'", "'REFX'", "'REFY'", "'REFZ'", 
      "", "'OFF'", "", "'BONH'", "'TOL'", "", "'ANGH'", "", "", "'FAST'", 
      "", "", "'NOE'", "", "'PNOE'", "", "'KMIN'", "'KMAX'", "'RMIN'", "'RMAX'", 
      "'FMAX'", "'MINDIST'", "'RSWI'", "'SEXP'", "'SUMR'", "'TCON'", "'REXP'", 
      "'CNOX'", "'CNOY'", "'CNOZ'", "", "'INOE'", "'TNOX'", "'TNOY'", "'TNOZ'", 
      "", "'READ'", "", "'UNIT'", "", "'ANAL'", "'CUT'", "", "", "", "'KVAL'", 
      "'RVAL'", "'EVAL'", "'IVAL'", "", "", "'PULL'", "'XDIR'", "'YDIR'", 
      "'ZDIR'", "", "'LIST'", "", "", "'RMSD'", "'MAXN'", "'NPRT'", "'SHOW'", 
      "", "", "", "", "", "", "", "", "", "", "", "'.OR.'", "'.AND.'", "'.NOT.'", 
      "'.AROUND.'", "'.SUBSET.'", "'.BONDED.'", "'.BYRES.'", "'.BYGROUP.'", 
      "", "'ISEG'", "", "'IRES'", "", "", "'TYPE'", "", "'ATOM'", "", "", 
      "", "'LONE'", "", "'USER'", "", "", "'ALL'", "'NONE'", "", "", "", 
      "", "", "", "", "", "'('", "')'", "':'", "'.EQ.'", "'.LT.'", "'.GT.'", 
      "'.LE.'", "'.GE.'", "'.NE.'", "'.AE.'", "", "", "", "", "", "", "'='", 
      "", "", "", "", "", "", "", "", "'ABS'"
    },
    std::vector<std::string>{
      "", "Set", "End", "Cons", "Harmonic", "Absolute", "Bestfit", "Relative", 
      "Clear", "Force", "Mass", "Weight", "Exponent", "XScale", "YScale", 
      "ZScale", "NoRotation", "NoTranslation", "Main", "Comp", "Keep", "Dihedral", 
      "ByNumber", "Min", "Period", "Width", "ClDh", "IC", "Bond", "Upper", 
      "Angle", "Improper", "Droplet", "NoMass", "Fix", "Purg", "Thet", "Phi", 
      "Imph", "Hmcm", "RefX", "RefY", "RefZ", "Shake", "Off", "NoReset", 
      "BonH", "Tol", "MxIter", "AngH", "Parameters", "ShkScale", "Fast", 
      "Water", "NoFast", "Noe", "Reset", "PNoe", "Assign", "KMin", "KMax", 
      "RMin", "RMax", "FMax", "MinDist", "RSwi", "SExp", "SumR", "TCon", 
      "RExp", "CnoX", "CnoY", "CnoZ", "MPNoe", "INoe", "TnoX", "TnoY", "TnoZ", 
      "NMPNoe", "Read", "Write", "Unit", "Print", "Anal", "Cut", "Scale", 
      "Temperature", "ResDistance", "KVal", "RVal", "EVal", "IVal", "Positive", 
      "Negative", "Pull", "XDir", "YDir", "ZDir", "EField", "List", "Switch", 
      "SForce", "RMSD", "MaxN", "NPrt", "Show", "Offset", "BOffset", "RGyration", 
      "Reference", "Orient", "Output", "NSave", "DMConstrain", "Cutoff", 
      "NContact", "Selection", "Or_op", "And_op", "Not_op", "Around", "Subset", 
      "Bonded", "ByRes", "ByGroup", "SegIdentifier", "ISeg", "Residue", 
      "IRes", "Resname", "IGroup", "Type", "Chemical", "Atom", "Property", 
      "Point", "Initial", "Lone", "Hydrogen", "User", "Previous", "Recall", 
      "All", "NONE", "Integer", "Real", "Double_quote_string", "SMCLN_COMMENT", 
      "COMMENT", "Simple_name", "Simple_names", "Integers", "L_paren", "R_paren", 
      "Colon", "Equ_op", "Lt_op", "Gt_op", "Leq_op", "Geq_op", "Neq_op", 
      "Aeq_op", "Symbol_name", "SPACE", "CONTINUE", "ENCLOSE_COMMENT", "SECTION_COMMENT", 
      "LINE_COMMENT", "Equ_op_VE", "Integer_VE", "Real_VE", "Simple_name_VE", 
      "SPACE_VE", "RETURN_VE", "Any_name", "SPACE_CM", "RETURN_CM", "Abs", 
      "Attr_properties", "Comparison_ops", "SPACE_AP"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  charmmmrparserParserStaticData = std::move(staticData);
}

}

CharmmMRParser::CharmmMRParser(TokenStream *input) : CharmmMRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CharmmMRParser::CharmmMRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CharmmMRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *charmmmrparserParserStaticData->atn, charmmmrparserParserStaticData->decisionToDFA, charmmmrparserParserStaticData->sharedContextCache, options);
}

CharmmMRParser::~CharmmMRParser() {
  delete _interpreter;
}

const atn::ATN& CharmmMRParser::getATN() const {
  return *charmmmrparserParserStaticData->atn;
}

std::string CharmmMRParser::getGrammarFileName() const {
  return "CharmmMRParser.g4";
}

const std::vector<std::string>& CharmmMRParser::getRuleNames() const {
  return charmmmrparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CharmmMRParser::getVocabulary() const {
  return charmmmrparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CharmmMRParser::getSerializedATN() const {
  return charmmmrparserParserStaticData->serializedATN;
}


//----------------- Charmm_mrContext ------------------------------------------------------------------

CharmmMRParser::Charmm_mrContext::Charmm_mrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CharmmMRParser::Charmm_mrContext::EOF() {
  return getToken(CharmmMRParser::EOF, 0);
}

std::vector<CharmmMRParser::CommentContext *> CharmmMRParser::Charmm_mrContext::comment() {
  return getRuleContexts<CharmmMRParser::CommentContext>();
}

CharmmMRParser::CommentContext* CharmmMRParser::Charmm_mrContext::comment(size_t i) {
  return getRuleContext<CharmmMRParser::CommentContext>(i);
}

std::vector<CharmmMRParser::Distance_restraintContext *> CharmmMRParser::Charmm_mrContext::distance_restraint() {
  return getRuleContexts<CharmmMRParser::Distance_restraintContext>();
}

CharmmMRParser::Distance_restraintContext* CharmmMRParser::Charmm_mrContext::distance_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Distance_restraintContext>(i);
}

std::vector<CharmmMRParser::Point_distance_restraintContext *> CharmmMRParser::Charmm_mrContext::point_distance_restraint() {
  return getRuleContexts<CharmmMRParser::Point_distance_restraintContext>();
}

CharmmMRParser::Point_distance_restraintContext* CharmmMRParser::Charmm_mrContext::point_distance_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Point_distance_restraintContext>(i);
}

std::vector<CharmmMRParser::Dihedral_angle_restraintContext *> CharmmMRParser::Charmm_mrContext::dihedral_angle_restraint() {
  return getRuleContexts<CharmmMRParser::Dihedral_angle_restraintContext>();
}

CharmmMRParser::Dihedral_angle_restraintContext* CharmmMRParser::Charmm_mrContext::dihedral_angle_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Dihedral_angle_restraintContext>(i);
}

std::vector<CharmmMRParser::Harmonic_restraintContext *> CharmmMRParser::Charmm_mrContext::harmonic_restraint() {
  return getRuleContexts<CharmmMRParser::Harmonic_restraintContext>();
}

CharmmMRParser::Harmonic_restraintContext* CharmmMRParser::Charmm_mrContext::harmonic_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Harmonic_restraintContext>(i);
}

std::vector<CharmmMRParser::Manipulate_internal_coordinateContext *> CharmmMRParser::Charmm_mrContext::manipulate_internal_coordinate() {
  return getRuleContexts<CharmmMRParser::Manipulate_internal_coordinateContext>();
}

CharmmMRParser::Manipulate_internal_coordinateContext* CharmmMRParser::Charmm_mrContext::manipulate_internal_coordinate(size_t i) {
  return getRuleContext<CharmmMRParser::Manipulate_internal_coordinateContext>(i);
}

std::vector<CharmmMRParser::Droplet_potentialContext *> CharmmMRParser::Charmm_mrContext::droplet_potential() {
  return getRuleContexts<CharmmMRParser::Droplet_potentialContext>();
}

CharmmMRParser::Droplet_potentialContext* CharmmMRParser::Charmm_mrContext::droplet_potential(size_t i) {
  return getRuleContext<CharmmMRParser::Droplet_potentialContext>(i);
}

std::vector<CharmmMRParser::Fix_atom_constraintContext *> CharmmMRParser::Charmm_mrContext::fix_atom_constraint() {
  return getRuleContexts<CharmmMRParser::Fix_atom_constraintContext>();
}

CharmmMRParser::Fix_atom_constraintContext* CharmmMRParser::Charmm_mrContext::fix_atom_constraint(size_t i) {
  return getRuleContext<CharmmMRParser::Fix_atom_constraintContext>(i);
}

std::vector<CharmmMRParser::Center_of_mass_constraintContext *> CharmmMRParser::Charmm_mrContext::center_of_mass_constraint() {
  return getRuleContexts<CharmmMRParser::Center_of_mass_constraintContext>();
}

CharmmMRParser::Center_of_mass_constraintContext* CharmmMRParser::Charmm_mrContext::center_of_mass_constraint(size_t i) {
  return getRuleContext<CharmmMRParser::Center_of_mass_constraintContext>(i);
}

std::vector<CharmmMRParser::Fix_bond_or_angle_constraintContext *> CharmmMRParser::Charmm_mrContext::fix_bond_or_angle_constraint() {
  return getRuleContexts<CharmmMRParser::Fix_bond_or_angle_constraintContext>();
}

CharmmMRParser::Fix_bond_or_angle_constraintContext* CharmmMRParser::Charmm_mrContext::fix_bond_or_angle_constraint(size_t i) {
  return getRuleContext<CharmmMRParser::Fix_bond_or_angle_constraintContext>(i);
}

std::vector<CharmmMRParser::Restrained_distanceContext *> CharmmMRParser::Charmm_mrContext::restrained_distance() {
  return getRuleContexts<CharmmMRParser::Restrained_distanceContext>();
}

CharmmMRParser::Restrained_distanceContext* CharmmMRParser::Charmm_mrContext::restrained_distance(size_t i) {
  return getRuleContext<CharmmMRParser::Restrained_distanceContext>(i);
}

std::vector<CharmmMRParser::External_forceContext *> CharmmMRParser::Charmm_mrContext::external_force() {
  return getRuleContexts<CharmmMRParser::External_forceContext>();
}

CharmmMRParser::External_forceContext* CharmmMRParser::Charmm_mrContext::external_force(size_t i) {
  return getRuleContext<CharmmMRParser::External_forceContext>(i);
}

std::vector<CharmmMRParser::Rmsd_restraintContext *> CharmmMRParser::Charmm_mrContext::rmsd_restraint() {
  return getRuleContexts<CharmmMRParser::Rmsd_restraintContext>();
}

CharmmMRParser::Rmsd_restraintContext* CharmmMRParser::Charmm_mrContext::rmsd_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Rmsd_restraintContext>(i);
}

std::vector<CharmmMRParser::Gyration_restraintContext *> CharmmMRParser::Charmm_mrContext::gyration_restraint() {
  return getRuleContexts<CharmmMRParser::Gyration_restraintContext>();
}

CharmmMRParser::Gyration_restraintContext* CharmmMRParser::Charmm_mrContext::gyration_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Gyration_restraintContext>(i);
}

std::vector<CharmmMRParser::Distance_matrix_restraintContext *> CharmmMRParser::Charmm_mrContext::distance_matrix_restraint() {
  return getRuleContexts<CharmmMRParser::Distance_matrix_restraintContext>();
}

CharmmMRParser::Distance_matrix_restraintContext* CharmmMRParser::Charmm_mrContext::distance_matrix_restraint(size_t i) {
  return getRuleContext<CharmmMRParser::Distance_matrix_restraintContext>(i);
}

std::vector<CharmmMRParser::Set_statementContext *> CharmmMRParser::Charmm_mrContext::set_statement() {
  return getRuleContexts<CharmmMRParser::Set_statementContext>();
}

CharmmMRParser::Set_statementContext* CharmmMRParser::Charmm_mrContext::set_statement(size_t i) {
  return getRuleContext<CharmmMRParser::Set_statementContext>(i);
}


size_t CharmmMRParser::Charmm_mrContext::getRuleIndex() const {
  return CharmmMRParser::RuleCharmm_mr;
}


std::any CharmmMRParser::Charmm_mrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmMRParserVisitor*>(visitor))
    return parserVisitor->visitCharmm_mr(this);
  else
    return visitor->visitChildren(this);
}

CharmmMRParser::Charmm_mrContext* CharmmMRParser::charmm_mr() {
  Charmm_mrContext *_localctx = _tracker.createInstance<Charmm_mrContext>(_ctx, getState());
  enterRule(_localctx, 0, CharmmMRParser::RuleCharmm_mr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 180152781187842058) != 0) || ((((_la - 87) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 87)) & 2305843009282900097) != 0)) {
      setState(116);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(100);
        comment();
        break;
      }

      case 2: {
        setState(101);
        distance_restraint();
        break;
      }

      case 3: {
        setState(102);
        point_distance_restraint();
        break;
      }

      case 4: {
        setState(103);
        dihedral_angle_restraint();
        break;
      }

      case 5: {
        setState(104);
        harmonic_restraint();
        break;
      }

      case 6: {
        setState(105);
        manipulate_internal_coordinate();
        break;
      }

      case 7: {
        setState(106);
        droplet_potential();
        break;
      }

      case 8: {
        setState(107);
        fix_atom_constraint();
        break;
      }

      case 9: {
        setState(108);
        center_of_mass_constraint();
        break;
      }

      case 10: {
        setState(109);
        fix_bond_or_angle_constraint();
        break;
      }

      case 11: {
        setState(110);
        restrained_distance();
        break;
      }

      case 12: {
        setState(111);
        external_force();
        break;
      }

      case 13: {
        setState(112);
        rmsd_restraint();
        break;
      }

      case 14: {
        setState(113);
        gyration_restraint();
        break;
      }

      case 15: {
        setState(114);
        distance_matrix_restraint();
        break;
      }

      case 16: {
        setState(115);
        set_statement();
        break;
      }

      default:
        break;
      }
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(121);
    match(CharmmMRParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

CharmmMRParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CharmmMRParser::CommentContext::COMMENT() {
  return getToken(CharmmMRParser::COMMENT, 0);
}

tree::TerminalNode* CharmmMRParser::CommentContext::RETURN_CM() {
  return getToken(CharmmMRParser::RETURN_CM, 0);
}

tree::TerminalNode* CharmmMRParser::CommentContext::EOF() {
  return getToken(CharmmMRParser::EOF, 0);
}

std::vector<tree::TerminalNode *> CharmmMRParser::CommentContext::Any_name() {
  return getTokens(CharmmMRParser::Any_name);
}

tree::TerminalNode* CharmmMRParser::CommentContext::Any_name(size_t i) {
  return getToken(CharmmMRParser::Any_name, i);
}


size_t CharmmMRParser::CommentContext::getRuleIndex() const {
  return CharmmMRParser::RuleComment;
}


std::any CharmmMRParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmMRParserVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}

CharmmMRParser::CommentContext* CharmmMRParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 2, CharmmMRParser::RuleComment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(CharmmMRParser::COMMENT);
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CharmmMRParser::Any_name) {
      setState(124);
      match(CharmmMRParser::Any_name);
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(130);
    _la = _input->LA(1);
    if (!(_la == CharmmMRParser::EOF || _la == CharmmMRParser::RETURN_CM)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Distance_restraintContext ------------------------------------------------------------------

CharmmMRParser::Distance_restraintContext::Distance_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CharmmMRParser::Distance_restraintContext::Noe() {
  return getToken(CharmmMRParser::Noe, 0);
}

tree::TerminalNode* CharmmMRParser::Distance_restraintContext::End() {
  return getToken(CharmmMRParser::End, 0);
}

std::vector<CharmmMRParser::Noe_statementContext *> CharmmMRParser::Distance_restraintContext::noe_statement() {
  return getRuleContexts<CharmmMRParser::Noe_statementContext>();
}

CharmmMRParser::Noe_statementContext* CharmmMRParser::Distance_restraintContext::noe_statement(size_t i) {
  return getRuleContext<CharmmMRParser::Noe_statementContext>(i);
}


size_t CharmmMRParser::Distance_restraintContext::getRuleIndex() const {
  return CharmmMRParser::RuleDistance_restraint;
}


std::any CharmmMRParser::Distance_restraintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmMRParserVisitor*>(visitor))
    return parserVisitor->visitDistance_restraint(this);
  else
    return visitor->visitChildren(this);
}

CharmmMRParser::Distance_restraintContext* CharmmMRParser::distance_restraint() {
  Distance_restraintContext *_localctx = _tracker.createInstance<Distance_restraintContext>(_ctx, getState());
  enterRule(_localctx, 4, CharmmMRParser::RuleDistance_restraint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(CharmmMRParser::Noe);
    setState(136);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 56) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 56)) & 1707229181) != 0)) {
      setState(133);
      noe_statement();
      setState(138);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(139);
    match(CharmmMRParser::End);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Point_distance_restraintContext ------------------------------------------------------------------

CharmmMRParser::Point_distance_restraintContext::Point_distance_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
